<resources>
    <string name="app_name">LocationHub</string>

    <string name="MeOnTheMap">IO</string>
    <string name="LatLon">Lat: %1s\nLon: %2s</string>
    <string name="username">Username</string>
    <string name="user_distance">Distance: %.2f Km</string>
    <string name="login">Login</string>
    <string name="address">Address</string>

    <string name="gps_network_not_enabled">Rete GPS non abilitata</string>
    <string name="open_location_settings">Abilita GPS</string>
    <string name="cancel">Annulla</string>

    <string name="locationPermissionNotGranted">L\'app non ha il permesso di accedere alla posizione del telefono!</string>
    <string name="usernameAlreadyInUse">L\'username inserito è già in uso</string>
    <string name="usernameNotValid">L\'username inserito non è valido</string>
    <string name="usernameHelperText">Min 2 caratteri e nessun carattere speciale</string>
    <string name="networkError">Sono stati riscontrati problemi di rete, verifica la connessione e riprova</string>
    <string name="abnormalError">Si è verificato un errore anomalo lato server, riprovare più tardi</string>

    <string name="privacy">Privacy</string>
    <string name="position_privacy">Condividi la tua posizione</string>

    <string name="clientRange">Trova client nell\'arco di %.2f Km:</string>
    <string name="rangeMinMaxDistance">Distanza minima da te: %.2f Km\nDistanza massima da te: %.2f Km</string>

    <string name="location_unknown">Posizione Sconosciuta</string>
    <string name="address_unknown">Indirizzo Sconosciuto</string>
    <string name="distance_unknown">Distanza Sconosciuta</string>
    <string name="preferences">Preferenze</string>

</resources>