<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:orientation="vertical">

    <com.google.android.gms.maps.MapView
        android:id="@+id/worldMap_HomeFragment"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username_TextV_FragmentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/location_TextV_FragmentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LatLon"/>

        <TextView
            android:id="@+id/address_TextV_FragmentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>

    </LinearLayout>

</LinearLayout>