<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textSize="30sp"

        android:layout_marginTop="5dp"
        android:layout_marginStart="4dp"
        android:layout_gravity="start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/privacy_Switch_FragmentSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/position_privacy"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/range_TextView_FragmentSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clientRange"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/range_Slider_FragmentSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"

            android:valueFrom="100.0"
            android:valueTo="10000.0"
            android:stepSize="100.0"/>

    </LinearLayout>

</LinearLayout>